# black-hat-rust

me_01/sha1_cracker/src/: main.rs
tricorder/: Cargo.toml
tricorder/src/: cli.rs  error.rs  main.rs  model.rs  ports.rs  subdomains.rs
tricorder/src/modules/: mod.rs
tricorder/src/modules/http/: git_head_disclosure.rs  gitlab_open_registrations.rs  mod.rs
tricorder/src/modules/subdomains/: crtsh.rs  web_archive.rs
